--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,5 +35,7 @@ serde_json = "1.0"
 walkdir = "2"
 async-trait = "0.1"
 color-eyre = "0.6"
-nom = "7"
+pest = "2.0"
+pest_derive = "2.0"
+regex = "1"
 either = { version = "1", features = ["serde"] }
